@@ -26,7 +26,6 @@
 package jdk.jfr;
 
 import java.lang.annotation.Annotation;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -45,8 +44,8 @@ import jdk.jfr.internal.Utils;
  * @since 9
  */
 public final class EventType {
+    private static final List<String> UNCATEGORIZED = List.of("Uncategorized");
     private final PlatformEventType platformEventType;
-    private final List<String> UNCATEGORIZED = Collections.singletonList("Uncategorized");
     private Map<String, ValueDescriptor> cache; // create lazy to avoid memory overhead
     // helper constructor
     EventType(PlatformEventType platformEventType) {
@@ -66,6 +65,9 @@ public final class EventType {
     /**
      * Returns the field with the specified name, or {@code null} if it doesn't
      * exist.
+     * <p>
+     * It's possible to index into a nested field by using {@code "."} (for
+     * instance {@code "thread.group.parent.name}").
      *
      * @param name of the field to get, not {@code null}
      *
@@ -76,13 +78,18 @@ public final class EventType {
         Objects.requireNonNull(name);
         if (cache == null) {
             List<ValueDescriptor> fields = getFields();
-            Map<String, ValueDescriptor> newCache = new LinkedHashMap<String, ValueDescriptor>(fields.size());
+            Map<String, ValueDescriptor> newCache = new LinkedHashMap<>(fields.size());
             for (ValueDescriptor v :fields) {
                 newCache.put(v.getName(), v);
             }
-            cache = newCache;
+            cache = Map.copyOf(newCache);
         }
-        return cache.get(name);
+        ValueDescriptor result = cache.get(name);
+        if (result == null) {
+            // Cache doesn't contain subfields
+            result = platformEventType.getField(name);
+        }
+        return result;
     }
 
     /**
@@ -222,7 +229,7 @@ public final class EventType {
         if (c == null) {
             return UNCATEGORIZED;
         }
-        return Collections.unmodifiableList(Arrays.asList(c.value()));
+        return List.of(c.value());
     }
 
     // package private
