@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2004, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -111,7 +111,7 @@ public class PhantomReferenceEvilTest extends GCTestBase {
                     byte[] tmp = new byte[allocationSize];
 
                     if (counter % keepEveryXthObject == 0) {
-                        Integer ik = new Integer(tmp.hashCode());
+                        Integer ik = Integer.valueOf(tmp.hashCode());
                         if (hmHelper.containsKey(ik)) {
                             PhantomHelper ph = (PhantomHelper) hmHelper.get(ik);
                             ph.increaseHashCounter();
