@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -59,17 +59,17 @@ class test3 extends test1 {
         // make a static call
         if (staticFunctionDepth.intValue() > 0) {
             numFcalls = functionDepth;
-            staticFcalls = new Integer(staticFunctionDepth.intValue() - 1);
+            staticFcalls = Integer.valueOf(staticFunctionDepth.intValue() - 1);
             methodCallStr = Globals.returnNextStaticMethod(MethodID[1]);
         } else if (localNumLoops > 0) { // make a recursive call
-            numFcalls = new Long(functionDepth.longValue() - 1);
+            numFcalls = Long.valueOf(functionDepth.longValue() - 1);
             staticFcalls = staticFunctionDepth;
             Globals.addFunctionIDToVector(MethodID[1], ID);
             localNumLoops--;
             selfRecursion(summation, ID, numFcalls, staticFcalls);
             return;
         } else { // make a random call
-            numFcalls = new Long(functionDepth.longValue() - 1);
+            numFcalls = Long.valueOf(functionDepth.longValue() - 1);
             staticFcalls = staticFunctionDepth;
             methodCallStr = Globals.nextRandomMethod();
 
@@ -101,10 +101,10 @@ class test3 extends test1 {
         Integer staticFcalls;
         if (staticFunctionDepth.intValue() > 0) {
             numFcalls = functionDepth;
-            staticFcalls = new Integer(staticFunctionDepth.intValue() - 1);
+            staticFcalls = Integer.valueOf(staticFunctionDepth.intValue() - 1);
             methodCallStr = Globals.returnNextStaticMethod(MethodID[0]);
         } else {
-            numFcalls = new Long(functionDepth.longValue() - 1);
+            numFcalls = Long.valueOf(functionDepth.longValue() - 1);
             staticFcalls = staticFunctionDepth;
             methodCallStr = Globals.nextRandomMethod();
         }
