@@ -35,7 +35,7 @@ import org.xml.sax.helpers.DefaultHandler;
  * @test
  * @bug 4985486
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true parsers.Bug4985486
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow parsers.Bug4985486
  * @run testng/othervm parsers.Bug4985486
  * @summary Test SAXParser can parse large characters(more than 10000).
  */
