@@ -76,7 +76,7 @@ public class ProcessCommunicator {
     }
 
     /**
-     * Executes child {code Process}
+     * Executes child {@code Process}
      *
      * @param classToExecute class to be executed as a child java process
      * @param args args to be passed in to the child process
@@ -152,6 +152,7 @@ public class ProcessCommunicator {
     {
         StringBuilder commandBuilder = new StringBuilder();
         commandBuilder.append(javaPath).append(" ");
+        commandBuilder.append("-Djava.security.manager=allow ");
         commandBuilder.append("-cp ").append(System.getProperty("test.classes", ".")).append(File.pathSeparatorChar);
 
         if (classPathArguments.trim().length() > 0) {
