@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -54,12 +54,13 @@ public class TestSealedTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "-sourcepath", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
-                "public sealed class <span class=\"type-name-label\">A</span>");
+                """
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                """);
     }
 
     @Test
@@ -70,12 +71,13 @@ public class TestSealedTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "-sourcepath", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
-                "public sealed interface <span class=\"type-name-label\">A</span>");
+                """
+                <div class="type-signature"><span class="modifiers">public sealed interface </span><span class="element-name type-name-label">A</span></div>
+                """);
     }
 
     @Test
@@ -87,15 +89,18 @@ public class TestSealedTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
-                "public sealed class <span class=\"type-name-label\">A</span>");
+                """
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                """);
 
         checkOutput("p/B.html", true,
-                "public non-sealed class <span class=\"type-name-label\">B</span>");
+                """
+                <div class="type-signature"><span class="modifiers">public non-sealed class </span><span class="element-name type-name-label">B</span>
+                """);
     }
 
     @Test
@@ -107,15 +112,19 @@ public class TestSealedTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
-                "public sealed interface <span class=\"type-name-label\">A</span>");
+                """
+                <div class="type-signature"><span class="modifiers">public sealed interface </span><span class="element-name type-name-label">A</span>
+                """);
 
         checkOutput("p/B.html", true,
-                "public non-sealed interface <span class=\"type-name-label\">B</span>");
+                """
+                <div class="type-signature"><span class="modifiers">public non-sealed interface </span><span class="element-name type-name-label">B</span><span class="extends-implements">
+                extends <a href="A.html" title="interface in p">A</a></span></div>
+                """);
     }
 
     @Test
@@ -127,15 +136,18 @@ public class TestSealedTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
-                "public sealed class <span class=\"type-name-label\">A</span>");
+                """
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                """);
 
         checkOutput("p/B.html", true,
-                "public abstract sealed class <span class=\"type-name-label\">B</span>");
+                """
+                <div class="type-signature"><span class="modifiers">public abstract sealed class </span><span class="element-name type-name-label">B</span>
+                """);
     }
 
     @Test
@@ -147,15 +159,19 @@ public class TestSealedTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
-                "public sealed interface <span class=\"type-name-label\">A</span>");
+                """
+                <div class="type-signature"><span class="modifiers">public sealed interface </span><span class="element-name type-name-label">A</span>
+                """);
 
         checkOutput("p/B.html", true,
-                "public sealed interface <span class=\"type-name-label\">B</span>");
+                """
+                <div class="type-signature"><span class="modifiers">public sealed interface </span><span class="element-name type-name-label">B</span><span class="extends-implements">
+                extends <a href="A.html" title="interface in p">A</a></span></div>
+                """);
     }
 
     @Test
@@ -168,14 +184,15 @@ public class TestSealedTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
                 "--no-platform-links",
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
-                "<pre>public sealed class <span class=\"type-name-label\">A</span>\n"
-                + "extends java.lang.Object\n"
-                + "permits <a href=\"B.html\" title=\"class in p\">B</a></pre>");
+                """
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                <span class="extends-implements">extends java.lang.Object</span>
+                <span class="permits">permits <a href="B.html" title="class in p">B</a></span></div>
+                """);
     }
 
     @Test
@@ -190,16 +207,15 @@ public class TestSealedTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
                 "--no-platform-links",
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
-                "<pre>public sealed class <span class=\"type-name-label\">A</span>\n"
-                + "extends java.lang.Object\n"
-                + "permits <a href=\"B.html\" title=\"class in p\">B</a>, "
-                + "<a href=\"C.html\" title=\"class in p\">C</a>, "
-                + "<a href=\"D.html\" title=\"class in p\">D</a></pre>");
+                """
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                <span class="extends-implements">extends java.lang.Object</span>
+                <span class="permits">permits <a href="B.html" title="class in p">B</a>, <a href="C.html" title="class in p">C</a>, <a href="D.html" title="class in p">D</a></span></div>
+                """);
     }
 
     @Test
@@ -214,19 +230,18 @@ public class TestSealedTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
                 "--no-platform-links",
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
-                "<pre>public sealed class <span class=\"type-name-label\">A</span>\n"
-                + "extends java.lang.Object\n"
-                + "permits <a href=\"B.html\" title=\"class in p\">B</a>, "
-                + "<a href=\"C.html\" title=\"class in p\">C</a> "
-                + "<span class=\"permits-note\">(not exhaustive)</span></pre>");
+                """
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                <span class="extends-implements">extends java.lang.Object</span>
+                <span class="permits">permits <a href="B.html" title="class in p">B</a>, <a href="C.html" title="class in p">C</a> <span class="permits-note">(not exhaustive)</span></span></div>
+                """);
     }
 
-    // @Test // javac incorrectly rejects the source
+    @Test
     public void testPartialMultiplePermitsWithSubtypes1(Path base) throws IOException {
         Path src = base.resolve("src");
         tb.writeJavaFiles(src,
@@ -239,15 +254,16 @@ public class TestSealedTypes extends JavadocTester {
 
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
-                "--enable-preview", "--source", thisRelease,
+                "--no-platform-links",
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
-                "<pre>public sealed class <span class=\"type-name-label\">A</span>\n"
-                + "extends java.lang.Object\n"
-                + "permits <a href=\"B.html\" title=\"class in p\">B</a>, "
-                + "<a href=\"C.html\" title=\"class in p\">C</a>, p.D</pre>");
+                """
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                <span class="extends-implements">extends java.lang.Object</span>
+                <span class="permits">permits <a href="B.html" title="class in p">B</a>, <a href="C.html" title="class in p">C</a> <span class="permits-note">(not exhaustive)</span></span></div>
+                """);
     }
 
     @Test
@@ -264,16 +280,15 @@ public class TestSealedTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
                 "--no-platform-links",
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
-                "<pre>public sealed class <span class=\"type-name-label\">A</span>\n"
-                + "extends java.lang.Object\n"
-                + "permits <a href=\"B.html\" title=\"class in p\">B</a>, "
-                + "<a href=\"C.html\" title=\"class in p\">C</a> "
-                + "<span class=\"permits-note\">(not exhaustive)</span></pre>");
+                """
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                <span class="extends-implements">extends java.lang.Object</span>
+                <span class="permits">permits <a href="B.html" title="class in p">B</a>, <a href="C.html" title="class in p">C</a> <span class="permits-note">(not exhaustive)</span></span></div>
+                """);
     }
 
     @Test
@@ -289,16 +304,15 @@ public class TestSealedTypes extends JavadocTester {
                 "--source-path", src.toString(),
                 "--no-platform-links",
                 "-package",
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
-                "<pre>public sealed class <span class=\"type-name-label\">A</span>\n"
-                + "extends java.lang.Object\n"
-                + "permits <a href=\"B.html\" title=\"class in p\">B</a>, "
-                + "<a href=\"C.html\" title=\"class in p\">C</a>, "
-                + "<a href=\"D.html\" title=\"class in p\">D</a></pre>");
+                """
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                <span class="extends-implements">extends java.lang.Object</span>
+                <span class="permits">permits <a href="B.html" title="class in p">B</a>, <a href="C.html" title="class in p">C</a>, <a href="D.html" title="class in p">D</a></span></div>
+                """);
     }
 
     @Test
@@ -314,15 +328,14 @@ public class TestSealedTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "--source-path", src.toString(),
                 "--no-platform-links",
-                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
         checkOutput("p/A.html", true,
-                "<pre>public sealed class <span class=\"type-name-label\">A</span>\n"
-                + "extends java.lang.Object\n"
-                + "permits <a href=\"A.B.html\" title=\"class in p\">A.B</a>, "
-                + "<a href=\"A.C.html\" title=\"class in p\">A.C</a>, "
-                + "<a href=\"A.D.html\" title=\"class in p\">A.D</a></pre>");
+                """
+                <div class="type-signature"><span class="modifiers">public sealed class </span><span class="element-name type-name-label">A</span>
+                <span class="extends-implements">extends java.lang.Object</span>
+                <span class="permits">permits <a href="A.B.html" title="class in p">A.B</a>, <a href="A.C.html" title="class in p">A.C</a>, <a href="A.D.html" title="class in p">A.D</a></span></div>
+                """);
     }
 }
