@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,8 +30,7 @@
  *     jdk.compiler/com.sun.tools.javac.api
  *     jdk.compiler/com.sun.tools.javac.main
  * @build toolbox.ToolBox toolbox.JavacTask JavacTestingAbstractProcessor
- * @compile --enable-preview -source ${jdk.version} TestSealed.java
- * @run main/othervm --enable-preview TestSealed
+ * @run main TestSealed
  */
 
 import java.io.*;
@@ -46,8 +45,6 @@ import javax.lang.model.element.*;
 import javax.lang.model.type.*;
 import javax.lang.model.util.*;
 import java.time.*;
-
-import javax.tools.Diagnostic.Kind;
 
 import toolbox.JavacTask;
 import toolbox.Task;
@@ -115,32 +112,28 @@ public class TestSealed extends TestRunner {
         );
 
         List<String> expected = List.of(
-                "Note: visiting: SealedInterface Modifiers: [abstract, sealed]",
-                "Note:     this class has: 2, permitted subclasses",
-                "Note:     permitted subclass: NonSealedClass1",
-                "Note:     permitted subclass: SealedClass",
-                "Note: visiting: NonSealedClass1 Modifiers: [non-sealed]",
-                "Note:     this class has: 0, permitted subclasses",
-                "Note: visiting: SealedClass Modifiers: [sealed]",
-                "Note:     this class has: 2, permitted subclasses",
-                "Note:     permitted subclass: FinalClass",
-                "Note:     permitted subclass: NonSealedClass2",
-                "Note: visiting: FinalClass Modifiers: [final]",
-                "Note:     this class has: 0, permitted subclasses",
-                "Note: visiting: NonSealedClass2 Modifiers: [non-sealed]",
-                "Note:     this class has: 0, permitted subclasses",
-                "Note: visiting: ClassOutOfSealedHierarchy Modifiers: []",
-                "Note:     this class has: 0, permitted subclasses",
-                "Note: testSealedClassesProcessor" + File.separator + "src" + File.separator
-                        + "Test" + File.separator + "SealedInterface.java uses preview language features.",
-                "Note: Recompile with -Xlint:preview for details."
+                "- compiler.note.proc.messager: visiting: SealedInterface Modifiers: [abstract, sealed]",
+                "- compiler.note.proc.messager:     this class has: 2, permitted subclasses",
+                "- compiler.note.proc.messager:     permitted subclass: NonSealedClass1",
+                "- compiler.note.proc.messager:     permitted subclass: SealedClass",
+                "- compiler.note.proc.messager: visiting: NonSealedClass1 Modifiers: [non-sealed]",
+                "- compiler.note.proc.messager:     this class has: 0, permitted subclasses",
+                "- compiler.note.proc.messager: visiting: SealedClass Modifiers: [sealed]",
+                "- compiler.note.proc.messager:     this class has: 2, permitted subclasses",
+                "- compiler.note.proc.messager:     permitted subclass: FinalClass",
+                "- compiler.note.proc.messager:     permitted subclass: NonSealedClass2",
+                "- compiler.note.proc.messager: visiting: FinalClass Modifiers: [final]",
+                "- compiler.note.proc.messager:     this class has: 0, permitted subclasses",
+                "- compiler.note.proc.messager: visiting: NonSealedClass2 Modifiers: [non-sealed]",
+                "- compiler.note.proc.messager:     this class has: 0, permitted subclasses",
+                "- compiler.note.proc.messager: visiting: ClassOutOfSealedHierarchy Modifiers: []",
+                "- compiler.note.proc.messager:     this class has: 0, permitted subclasses"
         );
 
         for (Mode mode : new Mode[] {Mode.API}) {
             List<String> log = new JavacTask(tb, mode)
                     .options("-processor", SealedClassesProcessor.class.getName(),
-                            "--enable-preview",
-                            "-source", Integer.toString(Runtime.version().feature()))
+                            "-XDrawDiagnostics")
                     .files(findJavaFiles(src))
                     .outdir(classes)
                     .run()
@@ -190,11 +183,11 @@ public class TestSealed extends TestRunner {
 
             @Override
             public Void visitType(TypeElement element, Void p) {
-                messager.printMessage(Kind.NOTE, "visiting: " + element.getSimpleName() + " Modifiers: " + element.getModifiers());
+                messager.printNote("visiting: " + element.getSimpleName() + " Modifiers: " + element.getModifiers());
                 List<? extends TypeMirror> permittedSubclasses = element.getPermittedSubclasses();
-                messager.printMessage(Kind.NOTE, String.format("    this class has: %d, permitted subclasses", permittedSubclasses.size()));
+                messager.printNote(String.format("    this class has: %d, permitted subclasses", permittedSubclasses.size()));
                 for (TypeMirror tm: permittedSubclasses) {
-                    messager.printMessage(Kind.NOTE, String.format("    permitted subclass: %s", ((DeclaredType)tm).asElement().getSimpleName()));
+                    messager.printNote(String.format("    permitted subclass: %s", ((DeclaredType)tm).asElement().getSimpleName()));
                 }
                 return super.visitType(element, p);
             }
